--- a/public/css/master.css
+++ b/public/css/master.css
@@ -2,6 +2,14 @@ body {
   background: #dedede;
   padding-top: 65px; }
 
+h3 {
+  font-weight: 300;
+  border-bottom: 1px solid #aaa;
+  padding-bottom: 10px; }
+
+h4 {
+  font-weight: 300; }
+
 nav {
   width: 100%;
   overflow: hidden;
@@ -31,5 +39,9 @@ nav {
       text-decoration: none;
       color: #428bca;
       border-bottom: 3px solid #f09d54; }
+
+.menu-desc {
+  display: none;
+  margin-left: 10px; }
 
 /*# sourceMappingURL=master.css.map */
