--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -9,6 +9,7 @@ $blue: #428bca;
 body {
   background: #fefefe;
   padding-top: 65px;
+  padding-bottom: 65px;
 }
 
 h3 {
@@ -63,4 +64,74 @@ nav {
 
 .menu-desc {
   margin-left: 10px;
+}
+
+.movie-list {
+  width: 1000px;
+  display: block;
+  margin: 0 auto;
+}
+
+.movie-item {
+  overflow: hidden;
+  width: 250px;
+  height: 375px;
+  margin: 0px;
+  position: relative;
+
+  .image {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-size: 110%;
+    background-repeat: no-repeat;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -ms-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+  }
+
+  .movie-info {
+    width: 100%;
+    z-index: 100;
+    background: rgba(0,0,0,0.8);
+    color: white;
+    display: block;
+    margin: 0;
+    padding: 10px 0;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+
+    h4, p {
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
+
+.movie-cover-fade {
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+  display: block;
+  background: rgba(0,0,0,0.3);
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+
+  &:hover {
+    background: rgba(0,0,0,0.0);
+  }
+}
+
+.movie-item:hover .image {
+  background-size: 120%;
 }
