--- a/public/css/master.css
+++ b/public/css/master.css
@@ -63,7 +63,7 @@ nav {
     height: 100%;
     width: 100%;
     background-position: center;
-    background-size: 110%;
+    background-size: cover;
     background-repeat: no-repeat;
     -webkit-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
@@ -91,7 +91,7 @@ nav {
   height: 100%;
   z-index: 50;
   display: block;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.3);
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   -ms-transition: all .2s ease-in-out;
@@ -99,9 +99,6 @@ nav {
   transition: all .2s ease-in-out; }
   .movie-cover-fade:hover {
     background: transparent; }
-
-.movie-item:hover .image {
-  background-size: 115%; }
 
 .actor-item h4 {
   margin-bottom: 30px; }
