--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -86,7 +86,7 @@ nav {
     height: 100%;
     width: 100%;
     background-position: center;
-    background-size: 110%;
+    background-size: cover;
     background-repeat: no-repeat;
     -webkit-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
@@ -120,7 +120,7 @@ nav {
   height: 100%;
   z-index: 50;
   display: block;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.3);
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   -ms-transition: all .2s ease-in-out;
@@ -130,10 +130,6 @@ nav {
   &:hover {
     background: rgba(0,0,0,0.0);
   }
-}
-
-.movie-item:hover .image {
-  background-size: 115%;
 }
 
 .actor-item {
