--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -174,3 +174,62 @@ nav {
     border: 1px solid #666;
   }
 }
+
+.movie-detail {
+  h3 span {
+    color: #888;
+  }
+
+  h4 {
+    margin-top: 15px;
+  }
+
+  .actor-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+
+  .actors {
+    text-align: center;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  .genres {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 10px;
+
+    li {
+      display: inline-block;
+      list-style: none;
+      background: #0088CC;
+      border-radius: 20px;
+      padding: 3px 10px;
+      color: white;
+      font-size: 10px;
+    }
+  }
+}
+
+.movies {
+  .cover {
+    width: 140px;
+    height: 180px;
+    overflow: hidden;
+
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
